[gd_scene load_steps=38 format=3 uid="uid://6wdeqw2dvctl"]

[ext_resource type="Script" uid="uid://1hj5sswp341d" path="res://characters/luke (player)/fa_player.gd" id="1_jku72"]
[ext_resource type="Texture2D" uid="uid://c7w72agabit2q" path="res://characters/luke (player)/FA_luke.png" id="2_jku72"]
[ext_resource type="PackedScene" uid="uid://b48p080t1thuq" path="res://ui/menu/menu.tscn" id="3_f2g1a"]
[ext_resource type="PackedScene" uid="uid://c5ko21i6ow2a4" path="res://ui/tag/tag_menu.tscn" id="4_22nhb"]
[ext_resource type="PackedScene" uid="uid://yna85oredyjc" path="res://ui/dialog.tscn" id="5_tepwe"]
[ext_resource type="Texture2D" uid="uid://dsnqgs3dkyde8" path="res://assets/ui/black battle trans-1.png.png" id="6_vf072"]
[ext_resource type="AudioStream" uid="uid://cdqu0x2t7ewu2" path="res://audio/sfx/SE_Picnic.ogg" id="7_272cd"]
[ext_resource type="AudioStream" uid="uid://c6qjgqmyo17ji" path="res://audio/sfx/battle/BA_Heart_Heal.ogg" id="8_1a2kj"]
[ext_resource type="AudioStream" uid="uid://chog6xicp4e44" path="res://audio/sfx/battle/GEN_munch.ogg" id="9_qyj8o"]
[ext_resource type="AudioStream" uid="uid://cif3yris3s0fx" path="res://audio/sfx/battle/BA_battle_encounter_1.ogg" id="10_h2sxv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usj81"]
size = Vector2(30, 30)

[sub_resource type="Animation" id="Animation_0rd8a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_md3wo"]
resource_name = "idle_down"
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_67asb"]
resource_name = "idle_left"
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_wn36q"]
resource_name = "idle_right"
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_fmvti"]
resource_name = "idle_up"
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}

[sub_resource type="Animation" id="Animation_3cs72"]
resource_name = "sprint_down"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_h8k0j"]
resource_name = "sprint_down2"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-2.23517e-08, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_usj81"]
resource_name = "sprint_left"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_gaoqb"]
resource_name = "sprint_right"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_7h416"]
resource_name = "sprint_up"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_7e5ki"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_hb5jk"]
resource_name = "walk_down2"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_g0j5u"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 13]
}

[sub_resource type="Animation" id="Animation_toros"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.629196),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 25]
}

[sub_resource type="Animation" id="Animation_bebyw"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8k0j"]
_data = {
&"RESET": SubResource("Animation_0rd8a"),
&"idle_down": SubResource("Animation_md3wo"),
&"idle_left": SubResource("Animation_67asb"),
&"idle_right": SubResource("Animation_wn36q"),
&"idle_up": SubResource("Animation_fmvti"),
&"sprint_down": SubResource("Animation_3cs72"),
&"sprint_down2": SubResource("Animation_h8k0j"),
&"sprint_left": SubResource("Animation_usj81"),
&"sprint_right": SubResource("Animation_gaoqb"),
&"sprint_up": SubResource("Animation_7h416"),
&"walk_down": SubResource("Animation_7e5ki"),
&"walk_down2": SubResource("Animation_hb5jk"),
&"walk_left": SubResource("Animation_g0j5u"),
&"walk_right": SubResource("Animation_toros"),
&"walk_up": SubResource("Animation_bebyw")
}

[sub_resource type="Animation" id="Animation_lykbp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_nqmi6"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8hygb"]
resource_name = "fade_white"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hb5jk"]
_data = {
&"RESET": SubResource("Animation_lykbp"),
&"fade": SubResource("Animation_nqmi6"),
&"fade_white": SubResource("Animation_8hygb")
}

[sub_resource type="Animation" id="Animation_jxt73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BattleOverlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 480)]
}

[sub_resource type="Animation" id="Animation_0brk2"]
resource_name = "show"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BattleOverlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 361), Vector2(0, -494), Vector2(0, -494)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_be1yr"]
_data = {
&"RESET": SubResource("Animation_jxt73"),
&"show": SubResource("Animation_0brk2")
}

[sub_resource type="Animation" id="Animation_3872i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TagPhoto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(192, -320)]
}

[sub_resource type="Animation" id="Animation_qnkig"]
resource_name = "tag"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TagPhoto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(192, -320), Vector2(192, 96), Vector2(192, 96), Vector2(192, 480)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3872i"]
_data = {
&"RESET": SubResource("Animation_3872i"),
&"tag": SubResource("Animation_qnkig")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_jku72")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jku72")
hframes = 12
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.76837e-07, 3.57628e-07)
rotation = 1.5708
shape = SubResource("RectangleShape2D_usj81")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(26, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h8k0j")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="CanvasLayer" instance=ExtResource("3_f2g1a")]
visible = false

[node name="TagMenu" parent="CanvasLayer" instance=ExtResource("4_22nhb")]
visible = false

[node name="TagPhoto" type="ColorRect" parent="CanvasLayer"]
offset_left = 192.0
offset_top = -320.0
offset_right = 448.0
color = Color(0.419608, 0.00392157, 0.870588, 1)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Dialog" parent="CanvasLayer" instance=ExtResource("5_tepwe")]

[node name="BattleOverlay" type="TextureRect" parent="CanvasLayer"]
offset_top = 480.0
offset_right = 96.0
offset_bottom = 576.0
scale = Vector2(6.667, 6.667)
texture = ExtResource("6_vf072")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BattleOverlay"]
layout_mode = 0
offset_top = 95.2453
offset_right = 96.0
offset_bottom = 160.245
color = Color(0, 0, 0, 1)

[node name="ScreenAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hb5jk")
}

[node name="BattleAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_be1yr")
}

[node name="heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_272cd")
bus = &"SFX"

[node name="healbubbles" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1a2kj")
bus = &"SFX"

[node name="munch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qyj8o")
bus = &"SFX"

[node name="encounter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_h2sxv")
bus = &"SFX"

[node name="TagAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3872i")
}
